[package]
name = "sledit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
crossterm = "0.28.1"
ratatui = "0.29.0"
rfd = "0.15.0"
sled = "0.34.7"
dialoguer = "0.11.0"
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
ron = "0.8.1"
toml = "0.8.19"
indicatif = "0.17.8"
ctrlc = "3.4.5"
